force-app/main/default/objects/SOLXYZCSO001__ReportOutPutGroupHistory__c/SOLXYZCSO001__ReportOutPutGroupHistory__c.object-meta.xml
<CustomObject>
    <label>帳票出力履歴</label>
    <nameField>
        <displayFormat>HIS-{000000}</displayFormat>
        <label>履歴番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>