force-app/main/default/objects/SOLXYZCSO001__ReportOutPutGroupHistory__c/fields/SOLXYZCSO001__ObjectID__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ObjectID__c</fullName>
    <label>オブジェクトＩＤ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>