force-app/main/default/objects/SOLXYZCSO001__ReportOutPutGroupHistory__c/fields/SOLXYZCSO001__OriginalID__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__OriginalID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>元履歴ID</label>
    <referenceTo>SOLXYZCSO001__ReportOutPutGroupHistory__c</referenceTo>
    <relationshipLabel>帳票出力履歴</relationshipLabel>
    <relationshipName>ReportOutPutGroupHistoris</relationshipName>
    <type>Lookup</type>
</CustomField>