force-app/main/default/objects/SOLXYZCSO001__ReportOutPutGroupHistory__c/fields/SOLXYZCSO001__ReportType__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ReportType__c</fullName>
    <label>帳票種別</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>サイクル帳票</fullName>
            </value>
            <value>
                <fullName>可変帳票</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>