force-app/main/default/objects/SOLXYZCSO001__ReportOutPutGroupHistory__c/fields/SOLXYZCSO001__SaveSpace__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__SaveSpace__c</fullName>
    <label>保存先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>